--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer etch\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2008-03-08 22:51+0000\n"
+"POT-Creation-Date: 2008-03-10 22:50+0000\n"
 "PO-Revision-Date: 2007-02-25 12:39+0100\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
@@ -63,8 +63,12 @@ msgstr "Avís: el vostre sistema pot no ser arrencable!"
 #. :sl4:
 #. Type: note
 #. Description
+#. :s14:
+#. Type: note
+#. Description
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+#: ../nobootloader.templates:5001
 msgid "Setting firmware variables for automatic boot"
 msgstr ""
 "S'estan establint les variables del microprogramari per a l'arrencada "
@@ -92,7 +96,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+#: ../nobootloader.templates:3001 ../nobootloader.templates:5001
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
@@ -114,8 +118,49 @@ msgstr ""
 
 #. Type: note
 #. Description
-#. :sl4:
+#. :s14:
 #: ../nobootloader.templates:4001
+#, fuzzy
+msgid ""
+"Some variables need to be set in CFE in order for your system to boot "
+"automatically. At the end of installation, the system will reboot. At the "
+"firmware prompt, set the following variables to simplify booting:"
+msgstr ""
+"Es necessita establir algunes variables al microprogramari Genesi per a "
+"poder arrencar el sistema automàticament. Al final de la instal·lació, el "
+"sistema tornarà a arrencar. A l'indicador del microprogramari, establiu les "
+"següents variables del microprogramari per a habilitar l'arrencada "
+"automàtica:"
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid ""
+"You will only need to do this once. This enables you to just issue the "
+"command \"boot_debian\" at the CFE prompt."
+msgstr ""
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid ""
+"If you prefer to auto-boot on every startup, you can set the following "
+"variable in addition to the ones above:"
+msgstr ""
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid " setenv -p STARTUP \"$boot_debian\""
+msgstr ""
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:5001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -133,14 +178,14 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid "No boot loader installed"
 msgstr "No s'ha instal·lat cap carregador"
 
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -151,7 +196,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
