--- a/debian/po/be.po
+++ b/debian/po/be.po
@@ -19,7 +19,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: be\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2008-03-08 22:51+0000\n"
+"POT-Creation-Date: 2008-03-10 22:50+0000\n"
 "PO-Revision-Date: 2007-10-15 11:16+0100\n"
 "Last-Translator: Hleb Rubanau <g.rubanau@gmail.com>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
@@ -70,8 +70,12 @@ msgstr "Увага: Вашая сістэма можа быць няздольн
 #. :sl4:
 #. Type: note
 #. Description
+#. :s14:
+#. Type: note
+#. Description
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+#: ../nobootloader.templates:5001
 msgid "Setting firmware variables for automatic boot"
 msgstr "Прызначэнне параметраў прашыўкі для аўтаматычнай загрузкі"
 
@@ -96,7 +100,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+#: ../nobootloader.templates:3001 ../nobootloader.templates:5001
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
@@ -117,8 +121,48 @@ msgstr ""
 
 #. Type: note
 #. Description
-#. :sl4:
+#. :s14:
 #: ../nobootloader.templates:4001
+#, fuzzy
+msgid ""
+"Some variables need to be set in CFE in order for your system to boot "
+"automatically. At the end of installation, the system will reboot. At the "
+"firmware prompt, set the following variables to simplify booting:"
+msgstr ""
+"Варта вызначыць некаторыя параметры для прашыўкі Genesi, каб Вашая сістэма "
+"магла аўтаматычна загружацца. Напрыканцы ўсталявання сістэма перазагрузіцца. "
+"У абалонцы прашыўкі прызначце наступныя параметры, каб дазволіць "
+"аўтаматычную загрузку: "
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid ""
+"You will only need to do this once. This enables you to just issue the "
+"command \"boot_debian\" at the CFE prompt."
+msgstr ""
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid ""
+"If you prefer to auto-boot on every startup, you can set the following "
+"variable in addition to the ones above:"
+msgstr ""
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid " setenv -p STARTUP \"$boot_debian\""
+msgstr ""
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:5001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -135,14 +179,14 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid "No boot loader installed"
 msgstr "Не ўсталявана ніякага загрузчыка"
 
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -153,7 +197,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
