--- a/debian/po/id.po
+++ b/debian/po/id.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: id\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2008-03-08 22:51+0000\n"
+"POT-Creation-Date: 2008-03-10 22:50+0000\n"
 "PO-Revision-Date: 2008-02-12 15:23+0700\n"
 "Last-Translator: Arief S Fitrianto <arief@gurame.fisika.ui.ac.id>\n"
 "Language-Team: Bahasa Indonesia <debian-l10n-id@gurame.fisika.ui.ac.id>\n"
@@ -73,8 +73,12 @@ msgstr "Perhatian: Sistem Anda mungkin tidak dapat diboot!"
 #. :sl4:
 #. Type: note
 #. Description
+#. :s14:
+#. Type: note
+#. Description
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+#: ../nobootloader.templates:5001
 msgid "Setting firmware variables for automatic boot"
 msgstr "Menata variabel firmware untuk boot otomatis"
 
@@ -99,7 +103,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+#: ../nobootloader.templates:3001 ../nobootloader.templates:5001
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
@@ -120,8 +124,48 @@ msgstr ""
 
 #. Type: note
 #. Description
-#. :sl4:
+#. :s14:
 #: ../nobootloader.templates:4001
+#, fuzzy
+msgid ""
+"Some variables need to be set in CFE in order for your system to boot "
+"automatically. At the end of installation, the system will reboot. At the "
+"firmware prompt, set the following variables to simplify booting:"
+msgstr ""
+"Beberapa variabel perlu diatur pada Firmware Genesi agar sistem Anda dapat "
+"booting secara otomatis. Pada akhir instalasi, sistem akan boot-ulang. Pada "
+"prompt Firmware, atur variabel FIrmware berikut ini untuk menghipupkan "
+"booting otomatis:"
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid ""
+"You will only need to do this once. This enables you to just issue the "
+"command \"boot_debian\" at the CFE prompt."
+msgstr ""
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid ""
+"If you prefer to auto-boot on every startup, you can set the following "
+"variable in addition to the ones above:"
+msgstr ""
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid " setenv -p STARTUP \"$boot_debian\""
+msgstr ""
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:5001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -139,14 +183,14 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid "No boot loader installed"
 msgstr "Boot loader belum terpasang"
 
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -157,7 +201,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
