--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2008-03-08 22:51+0000\n"
+"POT-Creation-Date: 2008-03-10 22:50+0000\n"
 "PO-Revision-Date: 2007-11-15 16:03+0100\n"
 "Last-Translator: Ivan Masár <helix84@centrum.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
@@ -65,8 +65,12 @@ msgstr "Upozornenie: Váš systém sa nemusí spustiť!"
 #. :sl4:
 #. Type: note
 #. Description
+#. :s14:
+#. Type: note
+#. Description
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+#: ../nobootloader.templates:5001
 msgid "Setting firmware variables for automatic boot"
 msgstr "Nastavenie premenných firmware pre automatické štartovanie"
 
@@ -91,7 +95,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+#: ../nobootloader.templates:3001 ../nobootloader.templates:5001
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
@@ -112,8 +116,48 @@ msgstr ""
 
 #. Type: note
 #. Description
-#. :sl4:
+#. :s14:
 #: ../nobootloader.templates:4001
+#, fuzzy
+msgid ""
+"Some variables need to be set in CFE in order for your system to boot "
+"automatically. At the end of installation, the system will reboot. At the "
+"firmware prompt, set the following variables to simplify booting:"
+msgstr ""
+"Na automatické spúšťanie systému je potrebné nastavenie niektorých "
+"premenných v Genesi firmware. Na konci inštalácie sa systém reštartuje. V "
+"príkazovom režime firmware môžete umožniť automatické štartovanie nastavením "
+"nasledovných premenných:"
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid ""
+"You will only need to do this once. This enables you to just issue the "
+"command \"boot_debian\" at the CFE prompt."
+msgstr ""
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid ""
+"If you prefer to auto-boot on every startup, you can set the following "
+"variable in addition to the ones above:"
+msgstr ""
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid " setenv -p STARTUP \"$boot_debian\""
+msgstr ""
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:5001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -130,14 +174,14 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid "No boot loader installed"
 msgstr "Nie je nainštalovaný žiaden zavádzač"
 
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -148,7 +192,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
