--- a/debian/po/zh_CN.po
+++ b/debian/po/zh_CN.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2008-03-08 22:51+0000\n"
+"POT-Creation-Date: 2008-03-10 22:50+0000\n"
 "PO-Revision-Date: 2007-01-29 05:01-0500\n"
 "Last-Translator: Ming Hua <minghua@rice.edu>\n"
 "Language-Team: Debian Chinese [GB] <debian-chinese-gb@lists.debian.org>\n"
@@ -64,8 +64,12 @@ msgstr "警告：您的系统可能将无法启动！"
 #. :sl4:
 #. Type: note
 #. Description
+#. :s14:
+#. Type: note
+#. Description
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+#: ../nobootloader.templates:5001
 msgid "Setting firmware variables for automatic boot"
 msgstr "正在为自动启动设置固件变量"
 
@@ -89,7 +93,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+#: ../nobootloader.templates:3001 ../nobootloader.templates:5001
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
@@ -108,8 +112,47 @@ msgstr "另外，您可以在固件提示符下输入以下内容来手工启动
 
 #. Type: note
 #. Description
-#. :sl4:
+#. :s14:
 #: ../nobootloader.templates:4001
+#, fuzzy
+msgid ""
+"Some variables need to be set in CFE in order for your system to boot "
+"automatically. At the end of installation, the system will reboot. At the "
+"firmware prompt, set the following variables to simplify booting:"
+msgstr ""
+"要使系统能自动启动您的系统，您需要在 Genesi 固件中设置一些变量。在安装结束"
+"后，系统将会重启。在出现固件提示符后，请设置以下几个固件变量以开启自动启动功"
+"能："
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid ""
+"You will only need to do this once. This enables you to just issue the "
+"command \"boot_debian\" at the CFE prompt."
+msgstr ""
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid ""
+"If you prefer to auto-boot on every startup, you can set the following "
+"variable in addition to the ones above:"
+msgstr ""
+
+#. Type: note
+#. Description
+#. :s14:
+#: ../nobootloader.templates:4001
+msgid " setenv -p STARTUP \"$boot_debian\""
+msgstr ""
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:5001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -124,14 +167,14 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid "No boot loader installed"
 msgstr "未安装启动引导器"
 
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -142,7 +185,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl3:
-#: ../nobootloader.templates:5001
+#: ../nobootloader.templates:6001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
