[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r51933

--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -142,7 +142,7 @@ msgid ""
 "command \"boot_debian\" at the CFE prompt."
 msgstr ""
 "Cette action ne sera nécessaire qu'une seule fois. Elle permet d'utiliser "
-"une simple commande « boot debian » à l'invite de CFE."
+"une simple commande « boot_debian » à l'invite de CFE."
 
 #. Type: note
 #. Description
