[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r52678

--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2008-03-11 22:48+0000\n"
-"PO-Revision-Date: 2008-03-27 07:58+0200\n"
+"PO-Revision-Date: 2008-04-13 12:54+0200\n"
 "Last-Translator: Esko Arajärvi <edu@iki.fi>\n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -141,7 +141,7 @@ msgid ""
 "command \"boot_debian\" at the CFE prompt."
 msgstr ""
 "Tämä tarvitsee tehdä vain kerran. Tämä mahdollistaa sen, että CFE-"
-"kehoitteessa voidaan vain antaa komento ”boot_debian”."
+"kehotteessa voidaan vain antaa komento ”boot_debian”."
 
 #. Type: note
 #. Description
@@ -152,7 +152,7 @@ msgid ""
 "variable in addition to the ones above:"
 msgstr ""
 "Seuraava muuttuja voidaan asentaa yllä olevien lisäksi, jos halutaan käyttää "
-"automaattikäynnistystä jokaisella kännistyskerralla:"
+"automaattikäynnistystä jokaisella käynnistyskerralla:"
 
 #. Type: note
 #. Description
