Upgrade to debhelper v7.
r60565

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nobootloader (1.26) UNRELEASED; urgency=low
+
+  * Upgrade to debhelper v7.
+
+ -- Colin Watson <cjwatson@debian.org>  Tue, 01 Sep 2009 01:33:57 +0100
+
 nobootloader (1.25) unstable; urgency=low
 
   [ Frans Pop ]
