Remove Lintian overrides for missing Standards-Version field
Lintian now checks if a source package has only udebs and, if so, automatically
ignores a missing Standards-Version field in debian/control.

r61069

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 nobootloader (1.26) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Upgrade to debhelper v7.
+
+  [ Frans Pop ]
+  * Remove no longer needed Lintian override for missing Standards-
+    Version field.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 01 Sep 2009 01:33:57 +0100
 
